@@ -66,7 +66,7 @@ namespace gloox
 
   void Registration::createAccount( int fields, const RegistrationFields& values )
   {
-    if( !m_parent )
+    if( !m_parent || m_parent->state() != StateConnected )
       return;
 
     const std::string& id = m_parent->getID();
@@ -118,12 +118,22 @@ namespace gloox
 
   void Registration::createAccount( const DataForm& form )
   {
-    const Tag *tmp = form.tag();
-    if( tmp )
-    {
-      Tag *c = tmp->clone();
-      m_parent->send( c );
-    }
+    if( !m_parent || m_parent->state() != StateConnected )
+      return;
+
+    const std::string& id = m_parent->getID();
+
+    Tag *iq = new Tag( "iq" );
+    if( !m_to.empty() )
+      iq->addAttribute( "to", m_to.full() );
+    iq->addAttribute( "id", id );
+    iq->addAttribute( "type", "set" );
+    Tag *q = new Tag( iq, "query" );
+    q->addAttribute( "xmlns", XMLNS_REGISTER );
+    q->addChild( form.tag() );
+
+    m_parent->trackID( this, id, CreateAccount );
+    m_parent->send( iq );
   }
 
   void Registration::removeAccount()
